서버연동 코드 작성 (아직 작동안함!)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:translationY="152dp" />
     <!-- 아이디 입력 상자 -->
     <EditText
-        android:id="@+id/signup_id"
+        android:id="@+id/signin_id"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:ems="10"
