--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:paddingStart="15dp"
+    >
 
     <!--회원가입-->
     <TextView
@@ -153,7 +155,6 @@
         android:textSize="14sp"
         android:translationX="22dp"
         android:translationY="414dp" />
-
 
 
 </RelativeLayout>
