--- a/app/src/main/res/layout/main_session.xml
+++ b/app/src/main/res/layout/main_session.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingStart="15dp"
     android:paddingEnd="15dp">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
@@ -31,51 +33,56 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:layout_constraintVertical_bias="0.53">
+        tools:layout_editor_absoluteX="15dp">
 
-        <TextView
-            android:id="@+id/session_select_01"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/box_little_round_rectangular" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/session_select_02"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/box_little_round_rectangular" />
+            <TextView
+                android:id="@+id/session_select_01"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/box_little_round_rectangular" />
 
-        <TextView
-            android:id="@+id/session_select_03"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/box_little_round_rectangular" />
-        <TextView
-            android:id="@+id/session_select_04"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/box_little_round_rectangular" />
-        <TextView
-            android:id="@+id/session_select_05"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/box_little_round_rectangular" />
+            <TextView
+                android:id="@+id/session_select_02"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/box_little_round_rectangular" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/session_select_03"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/box_little_round_rectangular" />
+
+            <TextView
+                android:id="@+id/session_select_04"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/box_little_round_rectangular" />
+
+            <TextView
+                android:id="@+id/session_select_05"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/box_little_round_rectangular" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
