--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,9 @@
         android:layout_marginTop="238dp"
         android:ems="10"
         android:hint="아이디를 입력해주세요"
+        android:textColorHighlight="@color/beige"
+
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <!-- 비밀번호 -->
