--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/beige"
     >
-
     <!--회원가입-->
     <!--아이디 입력 창-->
 
@@ -36,6 +35,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/signup_contents"
         android:hint="아이디"
+        android:inputType="textPersonName"
         android:paddingStart="20dp"
         android:textAlignment="viewStart"
         android:textSize="14sp"
@@ -51,6 +51,7 @@
         android:background="@drawable/signup_contents"
         android:fontFamily="sans-serif"
         android:hint="닉네임"
+        android:inputType="textPersonName"
         android:paddingStart="20dp"
         android:textAlignment="viewStart"
         android:textSize="14sp"
@@ -66,6 +67,7 @@
         android:background="@drawable/signup_contents"
         android:fontFamily="sans-serif"
         android:hint="비밀번호 확인"
+        android:inputType="textPassword"
         android:paddingStart="20dp"
         android:textAlignment="viewStart"
         android:textSize="14sp"
@@ -81,6 +83,7 @@
         android:background="@drawable/signup_contents"
         android:fontFamily="sans-serif"
         android:hint="이메일"
+        android:inputType="textEmailAddress"
         android:paddingStart="20dp"
         android:textAlignment="viewStart"
         android:textSize="14sp"
@@ -96,6 +99,7 @@
         android:background="@drawable/signup_contents"
         android:fontFamily="sans-serif"
         android:hint="인증번호 입력"
+        android:inputType="number"
         android:paddingStart="20dp"
         android:textAlignment="viewStart"
         android:textSize="14sp"
