기존에 있던 make_char -> main_list 로 바꿈 ( 캐릭터, 세션 리스트 목록 = 로비 ) make_char (캐릭터 생성창) 액티비티 만들어둠

--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/beige"
-    tools:context=".make_char"
+    tools:context=".main_list"
     tools:ignore="ExtraText">
 
     <ImageView
