--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -14,8 +14,75 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
+      android:fontFamily="@font/kopubworld_dotum_bold"
       android:text="캐릭터 생성"
+      android:textSize="24sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+  <ImageView
+      android:id="@+id/imageView11"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="80dp"
+      app:layout_constraintTop_toBottomOf="@+id/textView7"
+      app:srcCompat="@drawable/bagic_rect"
+      tools:layout_editor_absoluteX="16dp" />
+
+  <TextView
+      android:id="@+id/textView8"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="40dp"
+      android:layout_marginTop="112dp"
+      android:fontFamily="@font/kopubworld_dotum_bold"
+      android:text="캐릭터 이름"
+      android:textColor="@color/dark_brown"
+      android:textSize="16sp"
+      app:layout_constraintStart_toStartOf="@+id/imageView11"
+      app:layout_constraintTop_toTopOf="@+id/imageView11" />
+
+  <TextView
+      android:id="@+id/textView9"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="40dp"
+      android:layout_marginTop="76dp"
+      android:fontFamily="@font/kopubworld_dotum_bold"
+      android:text="능력치"
+      android:textColor="@color/dark_brown"
+      android:textSize="16sp"
+      app:layout_constraintStart_toStartOf="@+id/imageView11"
+      app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+  <EditText
+      android:id="@+id/editTextTextPersonName"
+      android:layout_width="wrap_content"
+      android:layout_height="38dp"
+      android:layout_marginStart="36dp"
+      android:ems="10"
+      android:inputType="textPersonName"
+      app:layout_constraintStart_toStartOf="@+id/imageView11"
+      app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+  <ImageButton
+      android:id="@+id/imageButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:backgroundTint="#00FFFFFF"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView7"
+      app:srcCompat="@drawable/bt_newchar" />
+
+  <ImageView
+      android:id="@+id/imageView12"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="14dp"
+      app:layout_constraintTop_toBottomOf="@+id/textView9"
+      app:srcCompat="@drawable/char_stat"
+      tools:layout_editor_absoluteX="56dp" />
+
 </android.support.constraint.ConstraintLayout>
