--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -40,6 +40,7 @@
         android:layout_marginEnd="268dp"
         android:fontFamily="@font/kopubworld_dotum_bold"
         android:text="프로필 목록"
+        android:textColor="@color/dark_brown"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -54,6 +55,7 @@
         android:layout_marginEnd="268dp"
         android:fontFamily="@font/kopubworld_dotum_bold"
         android:text="세션 방 목록"
+        android:textColor="@color/dark_brown"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
