--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".make_char"
-    android:background="@color/beige">
+    android:background="@color/beige"
+    tools:context=".make_char">
 
 
   <TextView
@@ -22,13 +22,14 @@
       app:layout_constraintTop_toTopOf="parent" />
 
   <ImageView
-      android:id="@+id/imageView11"
+      android:id="@+id/make_charinword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="80dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView7"
-      app:srcCompat="@drawable/bagic_rect"
-      tools:layout_editor_absoluteX="16dp" />
+      app:srcCompat="@drawable/bagic_rect" />
 
   <TextView
       android:id="@+id/textView8"
@@ -40,34 +41,35 @@
       android:text="캐릭터 이름"
       android:textColor="@color/dark_brown"
       android:textSize="16sp"
-      app:layout_constraintStart_toStartOf="@+id/imageView11"
-      app:layout_constraintTop_toTopOf="@+id/imageView11" />
+      app:layout_constraintStart_toStartOf="@+id/make_charinword"
+      app:layout_constraintTop_toTopOf="@+id/make_charinword" />
 
   <TextView
-      android:id="@+id/textView9"
+      android:id="@+id/textView10"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="40dp"
-      android:layout_marginTop="76dp"
+      android:layout_marginTop="38dp"
       android:fontFamily="@font/kopubworld_dotum_bold"
-      android:text="능력치"
+      android:text="한 마디"
       android:textColor="@color/dark_brown"
       android:textSize="16sp"
-      app:layout_constraintStart_toStartOf="@+id/imageView11"
-      app:layout_constraintTop_toBottomOf="@+id/textView8" />
+      app:layout_constraintStart_toStartOf="@+id/make_charinword"
+      app:layout_constraintTop_toBottomOf="@+id/make_charname" />
 
   <EditText
-      android:id="@+id/editTextTextPersonName"
-      android:layout_width="wrap_content"
-      android:layout_height="38dp"
+      android:id="@+id/make_charname"
+      android:layout_width="275dp"
+      android:layout_height="41dp"
       android:layout_marginStart="36dp"
+      android:layout_marginTop="8dp"
       android:ems="10"
       android:inputType="textPersonName"
-      app:layout_constraintStart_toStartOf="@+id/imageView11"
+      app:layout_constraintStart_toStartOf="@+id/make_charinword"
       app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
   <ImageButton
-      android:id="@+id/imageButton"
+      android:id="@+id/make_charprofile"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#00FFFFFF"
@@ -76,13 +78,18 @@
       app:layout_constraintTop_toBottomOf="@+id/textView7"
       app:srcCompat="@drawable/bt_newchar" />
 
-  <ImageView
-      android:id="@+id/imageView12"
+  <EditText
+      android:id="@+id/imageView13"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="14dp"
-      app:layout_constraintTop_toBottomOf="@+id/textView9"
-      app:srcCompat="@drawable/char_stat"
-      tools:layout_editor_absoluteX="56dp" />
+      android:layout_marginStart="40dp"
+      android:layout_marginTop="22dp"
+      android:background="@drawable/input_word"
+      android:fontFamily="@font/kopubworld_dotum_bold"
+      android:textSize="24sp"
+      android:maxEms="20"
+      android:gravity="center_vertical"
+      app:layout_constraintStart_toStartOf="@+id/make_charinword"
+      app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 </android.support.constraint.ConstraintLayout>
