--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -8,7 +8,6 @@
     android:background="@color/beige"
     tools:context=".make_char">
 
-
   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
@@ -79,7 +78,7 @@
       app:srcCompat="@drawable/bt_newchar" />
 
   <EditText
-      android:id="@+id/imageView13"
+      android:id="@+id/edit_word"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="40dp"
