--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -91,4 +91,15 @@
       app:layout_constraintStart_toStartOf="@+id/make_charinword"
       app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
+  <ImageView
+      android:id="@+id/char_img"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="48dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textView7"
+      app:srcCompat="@drawable/char_line" />
+
 </android.support.constraint.ConstraintLayout>
