--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -66,6 +66,17 @@
       android:inputType="textPersonName"
       app:layout_constraintStart_toStartOf="@+id/make_charinword"
       app:layout_constraintTop_toBottomOf="@+id/textView8" />
+  <ImageView
+      android:id="@+id/char_img"
+      android:layout_width="140dp"
+      android:layout_height="140dp"
+      android:layout_marginTop="48dp"
+      android:scaleType="fitXY"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textView7"
+      app:srcCompat="@drawable/char_line"/>
 
   <ImageButton
       android:id="@+id/make_charprofile"
@@ -85,21 +96,12 @@
       android:layout_marginTop="22dp"
       android:background="@drawable/input_word"
       android:fontFamily="@font/kopubworld_dotum_bold"
-      android:textSize="24sp"
+      android:textSize="18sp"
       android:maxEms="20"
       android:gravity="center_vertical"
       app:layout_constraintStart_toStartOf="@+id/make_charinword"
       app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
-  <ImageView
-      android:id="@+id/char_img"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/textView7"
-      app:srcCompat="@drawable/char_line" />
+
 
 </android.support.constraint.ConstraintLayout>
