--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -102,6 +102,15 @@
       app:layout_constraintStart_toStartOf="@+id/make_charinword"
       app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
+  <Button
+      android:id="@+id/make_bt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="60dp"
+      android:text="Button"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/edit_word" />
 
 
 </android.support.constraint.ConstraintLayout>
