--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -140,7 +140,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/bt_newsession"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
