--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -21,7 +21,7 @@
         app:navigationIcon="@drawable/navigation_icon" />
 
     <Button
-        android:id="@+id/bt_newchar"
+        android:id="@+id/bt_profile"
         android:layout_width="84dp"
         android:layout_height="84dp"
         android:layout_marginTop="60dp"
@@ -48,7 +48,7 @@
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_newchar" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_profile" />
 
     <TextView
         android:id="@+id/textView12"
@@ -60,7 +60,7 @@
         android:text="내 프로필"
         android:textColor="@color/dark_brown"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_newchar"
+        app:layout_constraintBottom_toTopOf="@+id/bt_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/myname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kopubworld_dotum_bold"
@@ -77,7 +77,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintStart_toEndOf="@+id/bt_newchar"
+        app:layout_constraintStart_toEndOf="@+id/bt_profile"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.298" />
 
@@ -93,8 +93,8 @@
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/bt_newchar"
-        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintStart_toEndOf="@+id/bt_profile"
+        app:layout_constraintTop_toBottomOf="@+id/myname"
         app:layout_constraintVertical_bias="0.68" />
 
     <TextView
@@ -133,6 +133,13 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/bt_newchar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/bt_char" />
+
+            <ImageView
                 android:id="@+id/profile1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -155,13 +162,6 @@
 
             <ImageView
                 android:id="@+id/profile4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/bt_char" />
-
-            <ImageView
-                android:id="@+id/profile5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
