뷰결합으로 대체

--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -79,7 +79,7 @@
       app:srcCompat="@drawable/char_line"/>
 
   <ImageButton
-      android:id="@+id/make_charprofile"
+      android:id="@+id/make_charimg"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#00FFFFFF"
