세션 이미지

--- a/app/src/main/res/layout/activity_make_session.xml
+++ b/app/src/main/res/layout/activity_make_session.xml
@@ -32,8 +32,8 @@
 
     <ImageView
         android:id="@+id/bt_sessioncard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="100dp"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
